tests/snapshots/community-vexor-skills_5.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(text, skills, edit)"
---
ship/type                                    = Vexor
ship/capacitorStablePercentage               = 33.883454
ship/maxTargetsCharacter                     = 25.000000
ship/maxTargets                              = 6.000000
ship/upgradeFree                             = 150.000000
ship/scanStrength                            = 19.200000
ship/passiveShieldEffectiveRechargeRate      = 5.779967
ship/passiveShieldRechargeRate               = 3.666667
ship/armorEffectiveRepairRate                = 135.710035
ship/armorRepairRate                         = 53.152415
ship/velocityBoost                           = 145.574534
ship/ehp                                     = 14769.453352
ship/shieldThermalDamageEffectiveResonance   = 0.175000
ship/shieldKineticDamageEffectiveResonance   = 0.131250
ship/shieldExplosiveDamageEffectiveResonance = 0.109375
ship/shieldEmDamageEffectiveResonance        = 0.218750
ship/hullThermalDamageEffectiveResonance     = 0.100500
ship/hullKineticDamageEffectiveResonance     = 0.100500
ship/hullExplosiveDamageEffectiveResonance   = 0.100500
ship/hullEmDamageEffectiveResonance          = 0.100500
ship/armorThermalDamageEffectiveResonance    = 0.103594
ship/armorKineticDamageEffectiveResonance    = 0.103594
ship/armorExplosiveDamageEffectiveResonance  = 0.104787
ship/armorEmDamageEffectiveResonance         = 0.079688
ship/shieldEhp                               = 2167.487658
ship/hullEhp                                 = 6218.905071
ship/armorEhp                                = 6383.060623
ship/shieldDamageEffectiveResonance          = 0.634375
ship/hullDamageEffectiveResonance            = 0.402000
ship/armorDamageEffectiveResonance           = 0.391662
ship/damagePerSecondWithReload               = 220.209864
ship/damagePerSecondWithoutReload            = 222.758589
ship/damageAlpha                             = 481.158553
ship/powerFree                               = 20.655000
ship/cpuFree                                 = 23.000000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 2.695833
ship/capacitorPeakDelta                      = 0.670466
ship/capacitorPeakLoad                       = 24.200000
ship/capacitorPeakRecharge                   = 24.870466
ship/alignTime                               = 8.858546
ship/mass                                    = 16100000.000000
ship/hp                                      = 2500.000000
ship/powerOutput                             = 875.000000
ship/powerLoad                               = 854.345000
ship/maxVelocity                             = 598.587927
ship/cpuOutput                               = 375.000000
ship/cpuLoad                                 = 352.000000
ship/rechargeRate                            = 361875.000000
ship/agility                                 = 0.396900
ship/maxTargetRange                          = 65625.000000
ship/scanSpeed                               = 4125.000000
ship/kineticDamageResonance                  = 0.402000
ship/thermalDamageResonance                  = 0.402000
ship/explosiveDamageResonance                = 0.402000
ship/emDamageResonance                       = 0.402000
ship/warpCapacitorNeed                       = 0.000000
ship/scanMagnetometricStrength               = 19.200000
ship/shieldCapacity                          = 1375.000000
ship/armorHP                                 = 2500.000000
ship/armorEmDamageResonance                  = 0.318750
ship/armorExplosiveDamageResonance           = 0.419147
ship/armorKineticDamageResonance             = 0.414375
ship/armorThermalDamageResonance             = 0.414375
ship/shieldEmDamageResonance                 = 0.875000
ship/shieldExplosiveDamageResonance          = 0.437500
ship/shieldKineticDamageResonance            = 0.525000
ship/shieldThermalDamageResonance            = 0.700000
ship/maxResearchGangSize                     = 30.000000
ship/shieldRechargeRate                      = 937500.000000
ship/capacitorCapacity                       = 3600.000000
ship/shieldUniformity                        = 1.000000
ship/shipBonus2AF                            = 25.000000
ship/shipBonusGC                             = 25.000000
ship/shipBonusCC                             = 25.000000
ship/shipBonusMB                             = 25.000000
ship/shipBonusCB                             = 25.000000
ship/shipBonusAB                             = 25.000000
ship/shipBonusMI                             = 25.000000
ship/shipBonusAI                             = 25.000000
ship/shipBonusCI                             = 25.000000
ship/shipBonusGI                             = 25.000000
ship/scanResolution                          = 350.000000
ship/shipBonusGC2                            = 50.000000
ship/advancedAgility                         = 0.750000
ship/jumpDriveConsumptionAmount              = 1000.000000
ship/advancedCapitalAgility                  = 0.750000
ship/jumpDriveCapacitorNeed                  = 0.750000
ship/upgradeLoad                             = 250.000000
ship/energyWarfareResistance                 = 0.780000
ship/shipBonusUF1                            = 5.000000
ship/shipBonusUF2                            = 5.000000
ship/shipBonusUC1                            = 5.000000
ship/shipBonusUC2                            = 5.000000
ship/shipBonusUB1                            = 5.000000
ship/shipBonusUB2                            = 5.000000
ship/conduitPassengerBonusModAdd             = 25.000000
ship/shipBonusOreDestroyer1                  = 25.000000
ship/shipBonusOreDestroyer2                  = 25.000000
ship/shipBonusOreDestroyer3                  = 25.000000
ship/shipBonusSoEECS1                        = 25.000000
ship/shipBonusSoEECS2                        = 25.000000
ship/shipBonusSoEECS3                        = 25.000000
ship/shipBonusSoEECS4                        = 25.000000
ship/shipBonusSoEECS5                        = 25.000000
ship/shipBonusAB3                            = 25.000000

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

outgoing_effect_1/type                 = Stasis Webifier II
outgoing_effect_1/effect               = remoteWebifierFalloff
outgoing_effect_1/speedFactor          = -60.000000
outgoing_effect_1/maxRange             = 10000.000000
outgoing_effect_1/falloffEffectiveness = 0.000000
outgoing_effect_1/remoteResistanceID   = 2115.000000

high_1-4/type                         = Heavy Electron Blaster II
high_1-4/state                        = active
high_1-4/damageVolley                 = 120.289638
high_1-4/speedWithReload              = 2185.000000
high_1-4/speedOfReload                = 25.000000
high_1-4/damagePerSecondWithReload    = 55.052466
high_1-4/damagePerSecondWithoutReload = 55.689647
high_1-4/chargeAmount                 = 199.999997
high_1-4/capacitorPeakLoad            = 0.680556
high_1-4/cycleTime                    = 2160.000000
high_1-4/capacitorNeed                = 1.470000
high_1-4/power                        = 82.800000
high_1-4/cpu                          = 19.500000
high_1-4/speed                        = 2160.000000
high_1-4/maxRange                     = 1500.000000
high_1-4/damageMultiplier             = 4.358320
high_1-4/falloff                      = 3750.000000
high_1-4/trackingSpeed                = 57.600002
high_1-4/heatDamage                   = 0.375000
high_1-4/charge/type                  = Caldari Navy Antimatter Charge M

medium_1/type  = Large Compact Pb-Acid Cap Battery
medium_1/state = online
medium_1/cpu   = 30.000000

medium_2/type              = Stasis Webifier II
medium_2/state             = active
medium_2/capacitorPeakLoad = 0.900000
medium_2/cycleTime         = 5000.000000
medium_2/capacitorNeed     = 4.500000
medium_2/heatDamage        = 3.750000

medium_3/type               = Omnidirectional Tracking Link II
medium_3/state              = active
medium_3/capacitorPeakLoad  = 0.133333
medium_3/cycleTime          = 30000.000000
medium_3/falloffBonus       = 0.000000
medium_3/maxRangeBonus      = 0.000000
medium_3/trackingSpeedBonus = 30.000000
medium_3/aoeVelocityBonus   = 16.500000
medium_3/aoeCloudSizeBonus  = -16.500000
medium_3/heatDamage         = 7.425000
medium_3/charge/type        = Tracking Speed Script

medium_4/type              = 10MN Y-S8 Compact Afterburner
medium_4/state             = active
medium_4/capacitorPeakLoad = 2.666667
medium_4/cycleTime         = 7500.000000
medium_4/capacitorNeed     = 20.000000
medium_4/speedFactor       = 156.250000
medium_4/duration          = 7500.000000
medium_4/heatDamage        = 4.275000

low_1-2/type             = Drone Damage Amplifier II
low_1-2/state            = online
low_1-2/hp               = 75.000000
low_1-2/damageMultiplier = 3.194312

low_3/type              = Medium Armor Repairer II
low_3/state             = active
low_3/armorRepairRate   = 53.152415
low_3/capacitorPeakLoad = 17.777778
low_3/cycleTime         = 9000.000000
low_3/power             = 152.145000
low_3/duration          = 9000.000000
low_3/armorDamageAmount = 478.371736
low_3/heatDamage        = 3.975000

low_4/type                           = Multispectrum Energized Membrane II
low_4/state                          = online
low_4/emDamageResistanceBonus        = -25.000000
low_4/explosiveDamageResistanceBonus = -25.000000
low_4/kineticDamageResistanceBonus   = -25.000000
low_4/thermalDamageResistanceBonus   = -25.000000

low_5/type  = Damage Control II
low_5/state = online

rig_1-2/type     = Medium Auxiliary Nano Pump I
rig_1-2/state    = online
rig_1-2/drawback = 5.000000

rig_3/type     = Medium Explosive Armor Reinforcer I
rig_3/state    = online
rig_3/drawback = 5.000000
