tests/snapshots/community-wreathe-skills_0.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(text, skills, edit)"
---
ship/type                                    = Wreathe
ship/capacitorStablePercentage               = 37.624648
ship/maxTargetsCharacter                     = 0.000000
ship/upgradeFree                             = 250.000000
ship/scanStrength                            = 7.000000
ship/passiveShieldEffectiveRechargeRate      = 44.504383
ship/passiveShieldRechargeRate               = 19.760000
ship/ehp                                     = 14140.710429
ship/shieldThermalDamageEffectiveResonance   = 0.105667
ship/shieldKineticDamageEffectiveResonance   = 0.112500
ship/shieldExplosiveDamageEffectiveResonance = 0.093750
ship/shieldEmDamageEffectiveResonance        = 0.132084
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.162500
ship/armorKineticDamageEffectiveResonance    = 0.187500
ship/armorExplosiveDamageEffectiveResonance  = 0.225000
ship/armorEmDamageEffectiveResonance         = 0.100000
ship/shieldEhp                               = 11126.095868
ship/hullEhp                                 = 1533.133057
ship/armorEhp                                = 1481.481504
ship/shieldDamageEffectiveResonance          = 0.444001
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.675000
ship/powerFree                               = -103.000000
ship/cpuFree                                 = 150.000000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 5.142857
ship/capacitorPeakDelta                      = 0.216867
ship/capacitorPeakLoad                       = 4.000000
ship/capacitorPeakRecharge                   = 4.216867
ship/alignTime                               = 7.421694
ship/hp                                      = 1027.199174
ship/powerLoad                               = 303.000000
ship/maxVelocity                             = 86.894502
ship/capacity                                = 6010.748100
ship/cpuLoad                                 = 170.000000
ship/agility                                 = 0.535362
ship/shieldCapacity                          = 4940.000000
ship/shieldEmDamageResonance                 = 0.528336
ship/shieldExplosiveDamageResonance          = 0.375000
ship/shieldKineticDamageResonance            = 0.450000
ship/shieldThermalDamageResonance            = 0.422669
ship/shipBonus2AF                            = 0.000000
ship/shipBonusGC                             = 0.000000
ship/shipBonusCC                             = 0.000000
ship/shipBonusMB                             = 0.000000
ship/shipBonusCB                             = 0.000000
ship/shipBonusAB                             = 0.000000
ship/shipBonusMI                             = 0.000000
ship/shipBonusAI                             = 0.000000
ship/shipBonusCI                             = 0.000000
ship/shipBonusGI                             = 0.000000
ship/signatureRadius                         = 273.858356
ship/warpSpeedMultiplier                     = 7.140462
ship/shipBonusMI2                            = 0.000000
ship/upgradeLoad                             = 150.000000
ship/shipBonusUF1                            = 0.000000
ship/shipBonusUF2                            = 0.000000
ship/shipBonusUC1                            = 0.000000
ship/shipBonusUC2                            = 0.000000
ship/shipBonusUB1                            = 0.000000
ship/shipBonusUB2                            = 0.000000
ship/shipBonusOreDestroyer1                  = 0.000000
ship/shipBonusOreDestroyer2                  = 0.000000
ship/shipBonusOreDestroyer3                  = 0.000000
ship/shipBonusSoEECS1                        = 0.000000
ship/shipBonusSoEECS2                        = 0.000000
ship/shipBonusSoEECS3                        = 0.000000
ship/shipBonusSoEECS4                        = 0.000000
ship/shipBonusSoEECS5                        = 0.000000
ship/shipBonusAB3                            = 0.000000

medium_1-2/type  = Large Shield Extender I
medium_1-2/state = online

medium_3/type              = Multispectrum Shield Hardener I
medium_3/state             = active
medium_3/capacitorPeakLoad = 4.000000
medium_3/cycleTime         = 10000.000000

medium_4/type  = Thermal Shield Amplifier I
medium_4/state = online

medium_5/type  = EM Shield Amplifier I
medium_5/state = online

low_1-3/type  = Expanded Cargohold II
low_1-3/state = online

low_4-5/type  = Inertial Stabilizers II
low_4-5/state = online

rig_1-3/type  = Medium Hyperspatial Velocity Optimizer I
rig_1-3/state = online

ship                                     = resource Powergrid 303.000000 of 200.000000
ship                                     = skill Minmatar Hauler needs 1 has 0
ship                                     = skill Spaceship Command needs 3 has 0
medium_1/Large Shield Extender I         = skill Shield Upgrades needs 1 has 0
medium_1/Large Shield Extender I         = skill Power Grid Management needs 2 has 0
medium_1/Large Shield Extender I         = skill Science needs 1 has 0
medium_2/Large Shield Extender I         = skill Shield Upgrades needs 1 has 0
medium_2/Large Shield Extender I         = skill Power Grid Management needs 2 has 0
medium_2/Large Shield Extender I         = skill Science needs 1 has 0
medium_3/Multispectrum Shield Hardener I = skill Tactical Shield Manipulation needs 1 has 0
medium_3/Multispectrum Shield Hardener I = skill Power Grid Management needs 3 has 0
medium_4/Thermal Shield Amplifier I      = skill Shield Upgrades needs 1 has 0
medium_4/Thermal Shield Amplifier I      = skill Power Grid Management needs 2 has 0
medium_4/Thermal Shield Amplifier I      = skill Science needs 1 has 0
medium_5/EM Shield Amplifier I           = skill Shield Upgrades needs 1 has 0
medium_5/EM Shield Amplifier I           = skill Power Grid Management needs 2 has 0
medium_5/EM Shield Amplifier I           = skill Science needs 1 has 0
low_1/Expanded Cargohold II              = skill Hull Upgrades needs 2 has 0
low_1/Expanded Cargohold II              = skill Mechanics needs 1 has 0
low_2/Expanded Cargohold II              = skill Hull Upgrades needs 2 has 0
low_2/Expanded Cargohold II              = skill Mechanics needs 1 has 0
low_3/Expanded Cargohold II              = skill Hull Upgrades needs 2 has 0
low_3/Expanded Cargohold II              = skill Mechanics needs 1 has 0
low_4/Inertial Stabilizers II            = skill Hull Upgrades needs 2 has 0
low_4/Inertial Stabilizers II            = skill Mechanics needs 1 has 0
low_5/Inertial Stabilizers II            = skill Hull Upgrades needs 2 has 0
low_5/Inertial Stabilizers II            = skill Mechanics needs 1 has 0
