tests/snapshots/community-wreathe-skills_5.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(text, skills, edit)"
---
ship/type                                    = Wreathe
ship/capacitorStablePercentage               = 68.591283
ship/maxTargetsCharacter                     = 25.000000
ship/maxTargets                              = 2.000000
ship/upgradeFree                             = 250.000000
ship/scanStrength                            = 8.400000
ship/passiveShieldEffectiveRechargeRate      = 79.284258
ship/passiveShieldRechargeRate               = 32.933333
ship/ehp                                     = 18634.066498
ship/shieldThermalDamageEffectiveResonance   = 0.092948
ship/shieldKineticDamageEffectiveResonance   = 0.112500
ship/shieldExplosiveDamageEffectiveResonance = 0.093750
ship/shieldEmDamageEffectiveResonance        = 0.116185
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.162500
ship/armorKineticDamageEffectiveResonance    = 0.187500
ship/armorExplosiveDamageEffectiveResonance  = 0.225000
ship/armorEmDamageEffectiveResonance         = 0.100000
ship/shieldEhp                               = 14865.798297
ship/hullEhp                                 = 1916.416321
ship/armorEhp                                = 1851.851880
ship/shieldDamageEffectiveResonance          = 0.415383
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.675000
ship/powerFree                               = 22.500000
ship/cpuFree                                 = 230.000000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 43.085714
ship/capacitorPeakDelta                      = 3.028112
ship/capacitorPeakLoad                       = 4.000000
ship/capacitorPeakRecharge                   = 7.028112
ship/alignTime                               = 3.757233
ship/hp                                      = 1283.998967
ship/powerOutput                             = 250.000000
ship/powerLoad                               = 227.500000
ship/maxVelocity                             = 108.618128
ship/capacity                                = 7513.435125
ship/cpuOutput                               = 400.000000
ship/cpuLoad                                 = 170.000000
ship/rechargeRate                            = 155625.000000
ship/agility                                 = 0.271027
ship/maxTargetRange                          = 43750.000000
ship/scanSpeed                               = 5062.500000
ship/warpCapacitorNeed                       = 0.000000
ship/scanLadarStrength                       = 8.400000
ship/shieldCapacity                          = 6175.000000
ship/armorHP                                 = 1250.000000
ship/shieldEmDamageResonance                 = 0.464740
ship/shieldExplosiveDamageResonance          = 0.375000
ship/shieldKineticDamageResonance            = 0.450000
ship/shieldThermalDamageResonance            = 0.371792
ship/maxResearchGangSize                     = 30.000000
ship/shieldRechargeRate                      = 468750.000000
ship/capacitorCapacity                       = 437.500000
ship/shieldUniformity                        = 1.000000
ship/shipBonus2AF                            = 25.000000
ship/shipBonusGC                             = 25.000000
ship/shipBonusCC                             = 25.000000
ship/shipBonusMB                             = 25.000000
ship/shipBonusCB                             = 25.000000
ship/shipBonusAB                             = 25.000000
ship/shipBonusMI                             = 25.000000
ship/shipBonusAI                             = 25.000000
ship/shipBonusCI                             = 25.000000
ship/shipBonusGI                             = 25.000000
ship/signatureRadius                         = 261.422821
ship/scanResolution                          = 118.750000
ship/warpSpeedMultiplier                     = 7.140462
ship/shipBonusMI2                            = -25.000000
ship/advancedAgility                         = 0.750000
ship/jumpDriveConsumptionAmount              = 1000.000000
ship/advancedCapitalAgility                  = 0.750000
ship/jumpDriveCapacitorNeed                  = 0.750000
ship/upgradeLoad                             = 150.000000
ship/shipBonusUF1                            = 5.000000
ship/shipBonusUF2                            = 5.000000
ship/shipBonusUC1                            = 5.000000
ship/shipBonusUC2                            = 5.000000
ship/shipBonusUB1                            = 5.000000
ship/shipBonusUB2                            = 5.000000
ship/conduitPassengerBonusModAdd             = 25.000000
ship/shipBonusOreDestroyer1                  = 25.000000
ship/shipBonusOreDestroyer2                  = 25.000000
ship/shipBonusOreDestroyer3                  = 25.000000
ship/shipBonusSoEECS1                        = 25.000000
ship/shipBonusSoEECS2                        = 25.000000
ship/shipBonusSoEECS3                        = 25.000000
ship/shipBonusSoEECS4                        = 25.000000
ship/shipBonusSoEECS5                        = 25.000000
ship/shipBonusAB3                            = 25.000000

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

medium_1-2/type  = Large Shield Extender I
medium_1-2/state = online
medium_1-2/power = 112.500000

medium_3/type              = Multispectrum Shield Hardener I
medium_3/state             = active
medium_3/capacitorPeakLoad = 4.000000
medium_3/cycleTime         = 10000.000000
medium_3/heatDamage        = 2.550000

medium_4/type                         = Thermal Shield Amplifier I
medium_4/state                        = online
medium_4/power                        = 0.750000
medium_4/thermalDamageResistanceBonus = -40.625000

medium_5/type                    = EM Shield Amplifier I
medium_5/state                   = online
medium_5/power                   = 0.750000
medium_5/emDamageResistanceBonus = -40.625000

low_1-3/type  = Expanded Cargohold II
low_1-3/state = online

low_4-5/type  = Inertial Stabilizers II
low_4-5/state = online

rig_1-3/type     = Medium Hyperspatial Velocity Optimizer I
rig_1-3/state    = online
rig_1-3/drawback = 5.000000
